add test Dockerfile and remove setup command

--- a/project.json
+++ b/project.json
@@ -1,6 +1,6 @@
 {
-  "serviceRole": "",
-  "serviceType": "",
+  "serviceRole": "exoservice",
+  "serviceType": "exoservice-type",
   "description": "",
   "author": "",
 }
