use yarn in main dockerfile

--- a/project.json
+++ b/project.json
@@ -1,6 +1,6 @@
 {
   "serviceRole": "exoservice",
-  "serviceType": "exoservice-type",
+  "serviceType": "ping-service",
   "description": "",
-  "author": "",
+  "author": ""
 }
