--- a/template/{{serviceRole}}/Dockerfile
+++ b/template/{{serviceRole}}/Dockerfile
@@ -1,7 +1,7 @@
 FROM nodesource/node
-
-# These steps ensure that npm install is only run when package.json changes
-COPY ./package.json .
 RUN curl -o- -L https://yarnpkg.com/install.sh | bash
+
+# These steps ensure that yarn install is only run when package.json changes
+COPY ./package.json .
 RUN $HOME/.yarn/bin/yarn install
 COPY . .
