--- a/template/{{serviceRole}}/package.json
+++ b/template/{{serviceRole}}/package.json
@@ -5,17 +5,28 @@
   },
   "description": "{{description}}",
   "devDependencies": {
+    "babel-eslint": "7.2.3",
     "chai": "4.1.1",
     "cucumber": "3.0.1",
     "dependency-lint": "5.0.1",
+    "eslint": "4.5.0",
+    "eslint-config-airbnb": "15.1.0",
+    "eslint-config-originate": "1.0.3",
+    "eslint-config-prettier": "2.3.0",
+    "eslint-plugin-filenames": "1.2.0",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-prettier": "2.2.0",
+    "eslint-plugin-react": "7.3.0",
     "exocom-mock": "0.26.0",
     "fs-extra": "4.0.1",
     "js-yaml": "3.9.1",
     "jsdiff-console": "2.2.1",
     "nitroglycerin": "1.1.2",
     "o-tools": "0.8.47",
-    "observable-process": "^3.2.2",
-    "port-reservation": "0.3.2"
+    "observable-process": "3.2.2",
+    "port-reservation": "0.3.2",
+    "prettier": "1.6.1"
   },
   "private": "true"
 }
