--- a/template/{{serviceRole}}/Dockerfile.prod
+++ b/template/{{serviceRole}}/Dockerfile.prod
@@ -1,8 +1,7 @@
-FROM nodesource/node
-RUN curl -o- -L https://yarnpkg.com/install.sh | bash
+FROM node
 
 # These steps ensure that yarn install is only run when package.json changes
 COPY ./package.json .
 COPY ./yarn.lock .
-RUN $HOME/.yarn/bin/yarn install
+RUN yarn
 COPY . .
