--- a/template/{{serviceRole}}/Dockerfile.dev
+++ b/template/{{serviceRole}}/Dockerfile.dev
@@ -1,9 +1,9 @@
-FROM nodesource/node
-ENV NODE_ENV="test"
-RUN curl -o- -L https://yarnpkg.com/install.sh | bash
+FROM node
+
+ENV NODE_ENV="development"
 
 # These steps ensure that yarn install is only run when package.json changes
-COPY ./package.json .
-COPY ./yarn.lock .
-RUN $HOME/.yarn/bin/yarn install
+COPY package.json .
+COPY yarn.lock .
+RUN yarn
 COPY . .
