--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - setup_remote_docker
       - run:
           name: install exosphere
-          command: curl --output exo --location --fail https://github.com/Originate/exosphere/releases/download/v0.26.2/exo-linux-amd64 && chmod +x exo
+          command: curl --output /bin/exo --location --fail https://github.com/Originate/exosphere/releases/download/v0.26.2/exo-linux-amd64 && chmod +x /bin/exo
       - run:
           name: run tests
-          command: ./exo template test
+          command: exo template test
