--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,12 +4,15 @@ jobs:
     docker:
       - image: circleci/buildpack-deps
     working_directory: ~/exoservice-js
+    environment:
+       BASH_ENV: ~/.bashrc
     steps:
+      - run: echo 'export PATH=$HOME/exoservice-js:$PATH' >> $BASH_ENV
       - checkout
       - setup_remote_docker
       - run:
           name: install exosphere
-          command: curl --output /bin/exo --location --fail https://github.com/Originate/exosphere/releases/download/v0.26.2/exo-linux-amd64 && chmod +x /bin/exo
+          command: curl --output exo --location --fail https://github.com/Originate/exosphere/releases/download/v0.26.2/exo-linux-amd64 && chmod +x exo
       - run:
           name: run tests
           command: exo template test
