--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,11 +4,8 @@ jobs:
     docker:
       - image: circleci/buildpack-deps
     working_directory: ~/exoservice-js
-    environment:
-      BASH_ENV: ~/.bashrc
     steps:
-      - run: touch $BASH_ENV
-      - run: echo 'export PATH=$HOME/exoservice-js:$PATH' > $BASH_ENV
+      - run: echo 'export PATH=$HOME/exoservice-js:$PATH' > ~/.bashrc
       - checkout
       - setup_remote_docker
       - run:
