--- a/template/{{serviceRole}}/Dockerfile.dev
+++ b/template/{{serviceRole}}/Dockerfile.dev
@@ -6,5 +6,7 @@ ENV NODE_ENV="development"
 COPY package.json .
 COPY yarn.lock .
 RUN yarn
+ENV PATH="/node_modules/.bin:${PATH}"
+
 WORKDIR /mnt
 COPY . .
